--- a/mlvsio/templates/js-count.html.4
+++ b/mlvsio/templates/js-count.html.4
@@ -9,7 +9,7 @@
 <style>
 
 body{
-    background: #F8F8F8;
+    background: #cccccc;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -32,6 +32,7 @@ main{
 
 <main>
 
+        <h4>Counter to/from pydal over sio</h4>
             <p id="id_status">disconnected! run chan_sio.py</p>
             <!-- where the counter will be displayed-->
             <p id="counter-board">?</p>
@@ -45,23 +46,26 @@ main{
 </main>
 
  <script> 
- ! function (sio_url, init_value, fi) {
+ ! function (sio_url, init_value) {
 
             const socket = io.connect( sio_url );
-            const py_var = fi;
-            id_status = document.getElementById("id_status")
-                        id_status.innerHTML = 'run chan_sio.py!';
-                        id_status.style.color='red';
+            const py_var = 'counter';
 
             socket.on('connect', ()=> {
-                socket.emit('sync_connect', {data: 'hello from ' + py_var });
+                socket.emit('sync_hello_connect', {data: 'hello from ' + py_var });
                 document.getElementById("id_status").innerHTML = 'connect, sio_channel=  ' + sio_url
-                id_status.style.color='blue';
+                //console.log('joke connected')
             });
 
             socket.on('disconnect', ()=> {
                 document.getElementById("id_status").innerHTML = 'disconnect!'
-                id_status.style.color='red';
+                // console.error('Jokes closed')
+                // console.log('joke disconnected')
+            });
+
+            socket.on('reconnect', ()=>{
+                document.getElementById("id_status").innerHTML = 'reconnect!'
+                //console.log('chart reconnected')
             });
 
 
@@ -81,13 +85,13 @@ main{
                 // function that increases the counter by 1
                 const increaseCounter = () =>{
                     counterBoard.innerHTML = ++counterValue;
-                    socket.emit(fi, {data: counterBoard.innerHTML    });
+                    socket.emit('var_increment', {data: py_var, value:  counterBoard.innerHTML    });
                 }
                 
                 // function that decreases the counter by 1
                 const decreaseCounter = () =>{
                     counterBoard.innerHTML = --counterValue;
-                    socket.emit(fi, {data: counterBoard.innerHTML  });
+                    socket.emit('var_decrement', {data: py_var, value:  counterBoard.innerHTML  });
                 }
                 
                 const resetCounter = () =>{
@@ -95,48 +99,28 @@ main{
                     counterBoard.innerHTML = 0;
                     // Update the variable container
                     counterValue = 0;
-                    socket.emit(fi, {data: counterBoard.innerHTML    });
+                    socket.emit('var_reset', {data: py_var, value:  counterBoard.innerHTML    });
                 }
                 
                 
                 // get the counter board value
                 const counterBoard = document.getElementById("counter-board");
-                if ( counterBoard.innerHTML === '?' ) { counterBoard.innerHTML = init_value; };
+                if (counterBoard.innerHTML === '?' ) {
+                   counterBoard.innerHTML = init_value;
+                   }
                 
                 
                 // Add event listener to the buttons
                 incrementButton.addEventListener('click', increaseCounter);
                 decrementButton.addEventListener('click', decreaseCounter);
                 resetButton.addEventListener('click', resetCounter);
-
-
-                socket.on('update_counter', function(msg) {
-                    counterValue = JSON.parse(msg).vars[0] ;// msg;
-                    if ( counterBoard.innerHTML ) { counterBoard.innerHTML = counterValue; };
-                    // console.log('update_counter: ' + msg);
-                });
-
-                socket.on('js_data', function(msg) {
-                    console.log('!!! '+ JSON.parse(msg).vars);
-                });
         
           }else {
            console.log("=== ", socket)
           };      
          
- } ( "[[ = t_vars['sio_serv_url'] ]]" , [[=  t_vars['value'] ]] , "[[=  XML(t_vars['_fi_']) ]]" );
+   } ( "[[ = t_vars['sio_serv_url'] ]]" , [[=  t_vars['counter'] ]]  );
                 
  </script>
-
-<script type="module">
-  import {appendDiv} from '../static/append-div.js'
-  // appendDiv('Hello from inline script')
-  // https://kentcdodds.com/blog/super-simple-start-to-es-modules-in-the-browser
-  //https://github.com/socketio/socket.io-admin-ui/
-</script>
-
-
-
-
                 
                 
