--- a/flvsio/templates/js-sliders.html.1
+++ b/flvsio/templates/js-sliders.html.1
@@ -47,28 +47,12 @@ width: 100%;
   position: absolute;
     width:  200px;
     height: 200px;
+    background-image: url(  [[ = URL('static/logop4w.png') ]] );
+    background-repeat: no-repeat;
     background-size: 50% 50%;
-    opacity: 0.3;
+  opacity: 0.3;
   z-index: -1;
-
-
 }
-
-
-
-.hero {
-/* Background pattern from Toptal Subtle Patterns */
-   width: 100%;
-   height: 100%;
-   background-image: url(  [[ = URL('static/logop4w.png') ]] );
-   background-size: 150px 150px;
-   background-repeat: no-repeat, no-repeat;
-
-}
-
-.bg-color {background:rgba(0,0,0,0);}
-.hero:hover .bg-color {background: rgba(0,0,0,.05);}
-
 
 
 
@@ -95,8 +79,11 @@ function debounce(func, timeout = 250){
 </script>
 
 
-<div class='hero'>
-<div class='bg-color'>
+<div id='bg'>
+
+
+<div id='id'>
+
     <p id="status"></p>
 
     <!-- label for="slider1">(from 0 and 100):</label -->
@@ -110,7 +97,7 @@ function debounce(func, timeout = 250){
     <p id="sync_txt1"></p>
 
 
-</div>
+</id>
 </div>
 
 <script>
@@ -125,23 +112,16 @@ function debounce(func, timeout = 250){
                   txt1 = document.getElementById('txt1'),
                   sync_txt1 = document.getElementById('sync_txt1'),
                   info =  document.getElementById('status');
-            const yourImg = document.querySelector('.hero'); 
+            const yourImg = document.getElementById('id::before');
                  
             info.innerHTML= 'disconnected; run chan_sio.py';
             info.style.color='red';
 
-set_size = function(v1, v2) {
-   v1 +=  150;
-   v2 +=  150;
-   let v1x = v1.toString() + 'px';
-   let v2x = v2.toString() + 'px';
-   console.log(v1x)
-   console.log(v2x)
-   if(yourImg && yourImg.style) {
-    yourImg.style.backgroundSize = v1x +' ' +  v2x;
-    }
-
+if(yourImg && yourImg.style) {
+    yourImg.style.height = '400px';
+    yourImg.style.width = '200px';
 }
+
 
 
             const set_values= function(x) {
@@ -163,8 +143,7 @@ set_size = function(v1, v2) {
 
             const get_values= function() {
                const js_vars = [ slider1.value   , slider2.value,  txt1.value ];
-               console.log('!!!: ' , parseInt(js_vars[0]) )
-               set_size(  parseInt(js_vars[0]), parseInt(js_vars[1])  ) 
+               //console.log('!!!: ' , js_vars )
                return  js_vars ; 
             }
 
@@ -190,7 +169,6 @@ set_size = function(v1, v2) {
 
             socket.on('update_sliders', function(msg) {
                set_values(msg);
-               console.log( msg  )
            });
 
 
